# GitGuessr-website

./: Cargo.toml  README.md  build.rs  docker-compose.yaml  nginx  rustfmt.toml
.cargo/: config
backend/: gitguessr.old.rs  gitguessr.rs  main.rs  schema.rs
backend/mail/: example.rs
backend/models/: mod.rs
backend/models/answer_choice/: generated.rs
backend/models/correct_answer/: generated.rs
backend/models/git_guessr_correct_answer/: generated.rs
backend/models/git_guessr_game_format_config/: generated.rs
backend/models/git_guessr_question/: generated.rs
backend/models/git_guessr_user_answer/: generated.rs
backend/models/lobby/: generated.rs
backend/models/lobby_participant/: generated.rs
backend/models/obfuscated_answer_choice/: generated.rs
backend/models/obfuscated_correct_answer/: generated.rs
backend/models/obfuscated_game_format_config/: generated.rs
backend/models/obfuscated_question/: generated.rs
backend/models/obfuscated_user_answer/: generated.rs
backend/models/question/: generated.rs
backend/models/repository/: generated.rs
backend/models/todos/: generated.rs
backend/models/user_answer/: generated.rs
backend/obfuscated/: mod.rs  obfuscator.rs  obfuscators-c.scm  obfuscators-python.scm  obfuscators-rust.scm  questions-c.scm  questions-python.scm  questions-rust.scm  wordlist.rs
backend/services/: answer_choice.rs  correct_answer.rs  git_guessr_correct_answer.rs  git_guessr_game_format_config.rs  git_guessr_paths.rs  git_guessr_question.rs  git_guessr_user_answer.rs  lobby.rs  lobby_participant.rs  mod.rs  obfuscated_answer_choice.rs  obfuscated_correct_answer.rs  obfuscated_game_format_config.rs  obfuscated_question.rs  obfuscated_user_answer.rs  question.rs  repository.rs  todo.rs  user_answer.rs
backend/views/: index.html
db/: data.sql  init.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  dev.tsx
frontend/src/apis/: answer_choice.ts  git_guessr_correct_answer.ts  git_guessr_game_format_config.ts  git_guessr_paths.ts  git_guessr_question.ts  git_guessr_user_answer.ts  lobby.ts  lobby_participant.ts  obfuscated_answer_choice.ts  obfuscated_correct_answer.ts  obfuscated_game_format_config.ts  obfuscated_question.ts  obfuscated_user_answer.ts  question.ts  repository.ts
frontend/src/containers/: AccountPage.tsx  ActivationPage.tsx  CreateLobby.tsx  CreateLobby2.tsx  Experiment.tsx  GameOverPage.tsx  GitGuessrQuestion.tsx  Home.tsx  JoinLobby.tsx  LoginPage.tsx  ObfuscatedQuestion.tsx  PrivateRoute.tsx  Question.tsx  RecoveryPage.tsx  RegistrationPage.tsx  ResetPage.tsx  Todo.tsx  (+3 more)
gitguessr_auth/: Cargo.toml
gitguessr_auth/src/: controller.rs  lib.rs  middleware.rs  schema.rs  user.rs  user_session.rs
gitguessr_auth/src/endpoints/: mod.rs  service_actixweb.rs
gitguessr_auth/src/extractors/: auth_actixweb.rs  mod.rs
gitguessr_auth/src/mail/: auth_activated.rs  auth_password_changed.rs  auth_password_reset.rs  auth_recover_existent_account.rs  auth_recover_nonexistent_account.rs  auth_register.rs
gitguessr_auth/src/permissions/: mod.rs  role_permission.rs  user_permission.rs  user_role.rs
migrations/2023-02-21-061819_gitguessr/: down.sql  up.sql
(+2 files in other folders)
