[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "git_guessr"
path = "backend/main.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.6.0"
actix-web = "4.0.1"
dsync = "0"
futures-util = "0.3.21"
create-rust-app = {version="9", default-features = false, features=["plugin_container", "plugin_dev", "database_postgres", "backend_actix-web"]}
serde_json = "1.0.79"
tsync = "1"
gitguessr_auth = { path = "gitguessr_auth" }

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "2.0.0-rc.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[patch.crates-io]
watchexec = { git = "https://github.com/david-a-perez/watchexec", branch = "switch-to-gix-config" }

[package]
default-run = "git_guessr"
edition = "2021"
name = "git_guessr"
publish = false
version = "0.1.0"
[profile.dev]
debug-assertions = true
